configure facebook login

--- a/app/client/landing.html
+++ b/app/client/landing.html
@@ -1,3 +1,5 @@
 <template name="landingPage">
   <h1>This is the landing page routed via router.js, template landingPage in landingPage.html</h1>
+
+  {{>loginButtons}}
 </template>
