--- a/app/client/createMeal.html
+++ b/app/client/createMeal.html
@@ -42,11 +42,30 @@
             <div class="col-xs-2"></div>
             <div class="col-xs-8">
                 <div class="input-group">
+                    <span class="input-group-addon">Price</span>
+                    <input type="file" name="..." class="myFileInput">
+                </div>
+            </div>
+            <div class="col-xs-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-2"></div>
+            <div class="col-xs-8">
+                <div class="input-group">
                     <button type="button" class="btn btn-default" id="submit-meal">Submit</button>
                 </div>
             </div>
             <div class="col-xs-2"></div>
         </div>
+
+        <div class="imageView">
+            {{#each images}}
+                <div>
+                    <a href="{{this.url}}" target="_blank"><img src="{{this.url}}" alt="" class="thumbnail" /></a>
+                </div>
+            {{/each}}
+        </div>
+
     </div>
 
 </template>
