--- a/app/client/createMeal.html
+++ b/app/client/createMeal.html
@@ -2,69 +2,52 @@
     <div class="jumbotron">
         <div class="container centered-text">
             <div class="row">
-                <h1 id="jumbotron-header">Add a meal to your recipe book, {{userName}}</h1>
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/51422-200.png" style="height:10%; width:10%;">
+                <h3 id="jumbotron-header">Add a meal to your cook book, {{userName}}.</h3>
 
             </div>
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-xs-2"></div>
-            <div class="col-xs-8">
-                <div class="input-group">
-                    <span class="input-group-addon">Name</span>
-                    <input type="text"  id="meal-name-input" class="form-control" placeholder="e.g. Big Kahuna Burger." aria-describedby="basic-addon1">
-                </div>
-            </div>
-            <div class="col-xs-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-xs-2"></div>
-            <div class="col-xs-8">
-                <div class="input-group">
-                    <span class="input-group-addon">Description</span>
-                    <input type="text"  id="meal-description-input" class="form-control" placeholder="e.g. Top Japanese Beef. Tasty beverage recommended to wash it down." aria-describedby="basic-addon1">
-                </div>
-            </div>
-            <div class="col-xs-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-xs-2"></div>
-            <div class="col-xs-8">
-                <div class="input-group">
-                    <span class="input-group-addon">Price</span>
-                    <input type="number" id="meal-price-input" class="form-control" placeholder="e.g. $50" aria-describedby="basic-addon1">
-                </div>
-            </div>
-            <div class="col-xs-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-xs-2"></div>
-            <div class="col-xs-8">
-                <div class="input-group">
-                    <span class="input-group-addon">Price</span>
-                    <input type="file" name="..." class="myFileInput" id="meal-pic-selector">
-                </div>
-            </div>
-            <div class="col-xs-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-xs-2"></div>
-            <div class="col-xs-8">
-                <div class="input-group">
-                    <button type="button" class="btn btn-default" id="submit-meal">Submit</button>
-                </div>
-            </div>
-            <div class="col-xs-2"></div>
+
+        <div class="row create">
+            <h1>What's your meal called?</h1>
+            <input type="text"  id="meal-name-input" class="form-control" placeholder="e.g. Big Kahuna Burger." aria-describedby="basic-addon1">
+
+
         </div>
 
-        <div class="imageView">
-            {{#each images}}
-                <div>
-                    <a href="{{this.url}}" target="_blank"><img src="{{this.url}}" alt="" class="meal-thumbnail" /></a>
-                </div>
-            {{/each}}
+        <div class="row create">
+            <h1>Tell me a little more about it.</h1>
+
+                <input type="text"  id="meal-description-input" class="form-control" placeholder="e.g. Top Japanese Beef. Tasty beverage recommended to wash it down." aria-describedby="basic-addon1">
+
         </div>
+
+        <div class="row create">
+            <h1>What's the damage?</h1>
+
+                <input type="number" id="meal-price-input" class="form-control" placeholder="e.g. $50" aria-describedby="basic-addon1">
+
+        </div>
+
+        <div class="row create">
+            <h1>Give it a face.</h1>
+                <input type="file" name="..." class="myFileInput" id="meal-pic-selector">
+                <div class="imageView col-md-9">
+                {{#each images}}
+                    <div>
+                        <a href="{{this.url}}" target="_blank"><img src="{{this.url}}" alt="" class="meal-thumbnail" /></a>
+                    </div>
+                {{/each}}
+            </div>
+        </div>
+
+        <div class="row create">
+            <button class="btn" id="submit-meal">Submit</button>
+        </div>
+
+
 
     </div>
 
