fixed jumbotron and tweaked createMeal page

--- a/app/client/createMeal.html
+++ b/app/client/createMeal.html
@@ -1,8 +1,8 @@
 <template name="createMeal">
-    <div class="jumbotron">
+    <div class="jumbotron" id="createMeal">
         <div class="container centered-text">
             <div class="row">
-                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/51422-200.png" style="height:10%; width:10%;">
+                <img src="http://i.imgur.com/2GTw75L.png" style="height:10%; width:10%;">
                 <h3 id="jumbotron-header">Add a meal to your cook book, {{userName}}.</h3>
 
             </div>
@@ -45,6 +45,9 @@
 
         <div class="row create">
             <button class="btn" id="submit-meal">Submit</button>
+        </div>
+
+        <div class="row create">
         </div>
 
 
