--- a/app/client/homeyCookLayout.html
+++ b/app/client/homeyCookLayout.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Homey Cook</a>
+                <a class="navbar-brand" href="/">Homey Cook</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
