--- a/app/client/landing.html
+++ b/app/client/landing.html
@@ -67,7 +67,7 @@
     <!-- Sign Up -->
     <div class="container">
 
-      <p class="center-align"><a href="#"><button class="btn" style="width:50%">Get food now</button></a></p>
+      <p class="center-align"><a href="/meals"><button class="btn" style="width:50%">Get food now</button></a></p>
 
 
 
