fixed navbar to display correct layouts and re-routed links

--- a/app/client/createMeal.html
+++ b/app/client/createMeal.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="row create">
-            <h2>What's the damage?</h2>
+            <h2>How much?</h2>
 
                 <input type="number" id="meal-price-input" class="form-control" placeholder="e.g. $50" aria-describedby="basic-addon1">
 
