--- a/app/client/homeyEatLayout.html
+++ b/app/client/homeyEatLayout.html
@@ -20,7 +20,7 @@
                         <a>{{>loginButtons}}</a>
                     </li>
                     <li>
-                        <a href="post.html">Become a Cook</a>
+                        <a href="/create">Become a Cook</a>
                     </li>
                 </ul>
             </div>
