--- a/app/client/dashboard.html
+++ b/app/client/dashboard.html
@@ -13,25 +13,19 @@
         <img class="users-picture" src={{profilePicture}}>
     {{/if}}
 
-    </div>
 
 
-    <div class="col-md-9">
-      <p>
-        <table>
-          <tr>
-            <th>Eaters</th>
-          </tr>
-          <tr>
-            <td>Order 1</td>
-            <td>Order 1's address</td>
-          </tr>
-          <tr>
-            <td>Order 2</td>
-          </tr>
-        </table>
-      </p>
     </div>
+
+    <div class="col-md-9 light-border no-margin no-padding">
+        <div class="jumbotron jumbotron-dashboard">
+            <p class="cooks-name">Yo Stats</p>
+        </div>
+        <p>Today</p>
+    </div>
+        <div class="row">
+            <p>test</p>
+        </div>
     </div>
       <div class="row">
           <div class="col-md-3 no-margin no-padding cook-profile-container light-border light-border-no-top">
