--- a/app/client/dashboard.html
+++ b/app/client/dashboard.html
@@ -39,23 +39,42 @@
     </div>
 
       <div class="col-md-9 light-border no-margin no-padding">
+
+
           <div class="jumbotron jumbotron-dashboard">
-              <p class="cooks-name">Orders</p>
+            <p class="cooks-name">Orders</p>
           </div>
-          <p>Today</p>
-          <p>Today</p>
-          <p>Today</p>
-          <p>Today</p>
-          <p>Today</p>
-          <p>Today</p>
-          <p>Today</p>
-          <p>Today</p>
+
+          <!-- Orders Table -->
+
+
+
+
+
+        <!-- for loop-->
+          <div class="row">
+
+            <div class="col-md-4">
+              <p>Name</p>
+            </div>
+            <div class="col-md-4">
+              <p>Address</p>
+            </div>
+            <div class="col-md-4">
+              <p>Status</p>
+            </div>
+
+          </div>
+
+
+
+
       </div>
     </div>
 
 
       <div class="row">
-          <div class="col-md-12 dashboard-spacer">
+          <div class="dashboard-spacer">
 
           </div>
       </div>
