added graphics to landing page

--- a/app/client/landing.html
+++ b/app/client/landing.html
@@ -16,20 +16,23 @@
     </header>
 
     <!-- How it works -->
-    <h2 class="center-align">How it works</h2>
+    <h2 class="center-align" id="landing-title">How it works</h2>
     <div class="container">
         <div class="row">
 
           <div class="col-md-4">
-            <p class="center-align">Browse meals around you</p>
+            <img src="https://static1.squarespace.com/static/5566c519e4b0daf687f21abe/t/55713500e4b09182507b1009/1433482498056/?format=300w&storage=local">
+            <h4 class="center-align">See what your neighbors are cooking</h4>
 
           </div>
           <div class="col-md-4">
-            <p class="center-align">Order and pay securely</p>
+            <img src="https://static1.squarespace.com/static/5566c519e4b0daf687f21abe/t/55713513e4b088d3d5c4a05b/1433482516158/?format=300w&storage=local">
+            <h4 class="center-align">Pick one of those meals and pay securely online</h4>
 
           </div>
           <div class="col-md-4">
-            <p class="center-align">Have your food delivered to your door</p>
+            <img src="https://static1.squarespace.com/static/5566c519e4b0daf687f21abe/t/55713525e4b006a58623e128/1433482534706/?format=300w&storage=local">
+            <h4 class="center-align">Have it delivered to your door</h4>
           </div>
 
         </div>
@@ -38,7 +41,7 @@
 
     <!-- Featured meals-->
 
-    <h2 class="center-align">What's cookin?</h2>
+    <h2 class="center-align" id="landing-title">What's cookin?</h2>
     <div class="container">
         <div class="row">
 
