added cookbook icon and link in dashboard

--- a/app/client/dashboard.html
+++ b/app/client/dashboard.html
@@ -22,6 +22,10 @@
 
         <div class="dashboard-spacer"></div>
 
+        <a href="#"><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/51422-200.png" style="width:20%; height:20%"><p>My Cook Book</p></a>
+
+        <div class="dashboard-spacer"></div>
+
         <div class="light-border no-margin no-padding">
             <div class="jumbotron jumbotron-dashboard">
               <p class="cooks-name">Summary</p>
