added 2 hardcoded markers

--- a/app/client/dashboard.html
+++ b/app/client/dashboard.html
@@ -91,6 +91,8 @@
       </div>
   </div>
 
-
+    <div class="map-container">
+        {{> googleMap name="ordersMap" options=mapOptions}}
+    </div>
 
 </template>
