--- a/app/client/cookscookbook.html
+++ b/app/client/cookscookbook.html
@@ -1,36 +1,38 @@
 <template name="myCookBook">
-    <div class="col-xs-12 col-sm-6 col-md-4 eachMeal">
-        <div class="row mealTitle">
-            <div class="col-xs-8">
-                <h2 class="meals-page-h2">
-                    Herb Chicken
+    {{#each displayChefsMeals}}
+        <div class="col-xs-12 col-sm-6 col-md-4 eachMeal">
+            <div class="row mealTitle">
+                <div class="col-xs-8">
+                    <h2 class="meals-page-h2">
+                        {{this.title}}
                     </h2>
+                    </div>
+                <div class="col-xs-4">
+                    <h3 class="meals-page-h3">
+                        ${{this.price}}
+                    </h3>
+                    </div>
+                <div class="col-xs-12 image">
+                    <img class="meal-picture" src={{this.photoPath}}>
                 </div>
-            <div class="col-xs-4">
-                <h3 class="meals-page-h3">
-                    $55
-                </h3>
+                <!--<div class="col-xs-12">-->
+                    <!--<p><i class="fa fa-star"></i>-->
+                        <!--<i class="fa fa-star"></i>-->
+                        <!--<i class="fa fa-star"></i>-->
+                        <!--<i class="fa fa-star-half-o"></i>-->
+                        <!--<i class="fa fa-star-o"></i>-->
+                    <!--</p>-->
+                <!--</div>-->
+                <div class="col-xs-12 mealDescription">
+                    <p>{{this.description}}</p>
+                    </div>
+                <div class="col-xs-12 delivered">Available</div>
+                <div class="col-xs-12">
+                    <button type="button" class="btn btn-danger orderButton unavailable-button">Set to Unavailable</button>
                 </div>
-            <div class="col-xs-12 image">
-                <img class="meal-picture" src="">
-                </div>
-            <div class="col-xs-12">
-                <p><i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </p>
-            </div>
-            <div class="col-xs-12 mealDescription">
-                <p>Herb Chicken</p>
-                </div>
-            <div class="col-xs-12 delivered">Available</div>
-            <div class="col-xs-12">
-                <button type="button" class="btn btn-default orderButton">Edit</button>
             </div>
         </div>
-    </div>
 
-    {{displayChefsMeals}}
+    {{/each}}
+
 </template>
