--- a/app/client/cookscookbook.html
+++ b/app/client/cookscookbook.html
@@ -34,5 +34,14 @@
         </div>
 
     {{/each}}
-
+    <div class="col-xs-3">
+    </div>
+    <div class="col-xs-3">
+        <button type="button" class="btn orderButton">Add another meal</button>
+    </div>
+    <div class="col-xs-3">
+        <button type="button" class="btn orderButton">View Your Dashboard</button>
+    </div>
+    <div class="col-xs-3">
+    </div>
 </template>
