half finished dashboard order population

--- a/app/client/cooksdashboard.html
+++ b/app/client/cooksdashboard.html
@@ -52,7 +52,7 @@
           <!-- Orders Table -->
 
 
-
+          {{> populateOrders}}
 
 
         <!-- for loop-->
@@ -64,14 +64,11 @@
             <div class="col-md-4">
               <p>
                 Address
-
-
               </p>
             </div>
             <div class="col-md-4">
               <p>Status</p>
             </div>
-
           </div>
 
           <input class="btn sm" type="button" name="answer" value="Map View" id="hide"/>
