deleted ingredientsId and added orders default

--- a/app/client/cooksdashboard.html
+++ b/app/client/cooksdashboard.html
@@ -22,7 +22,7 @@
 
         <div class="dashboard-spacer"></div>
 
-        <a href="#"><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/51422-200.png" style="width:20%; height:20%"><p>My Cook Book</p></a>
+        <a href="/cookbook"><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/51422-200.png" style="width:20%; height:20%"><p>My Cook Book</p></a>
 
         <div class="dashboard-spacer"></div>
 
@@ -56,23 +56,43 @@
 
 
         <!-- for loop-->
+
           <div class="row">
 
             <div class="col-md-4">
               <p>Name</p>
+              <p>Stephen Parker</p>
+
             </div>
             <div class="col-md-4">
-              <p>
-                Address
-
-
-              </p>
+              <p>Address</p>
+              <p>1234 Street, Hong Kong University</p>
             </div>
             <div class="col-md-4">
               <p>Status</p>
+              <p> Pending </p>
             </div>
 
           </div>
+
+
+          <div class="row">
+            <div class="col-md-4">
+
+            <p></p>
+            </div>
+
+            <div class="col-md-4">
+
+            <p></p>
+            </div>
+
+            <div class="col-md-4">
+
+            <p></p>
+            </div>
+          </div>
+
 
           <input class="btn sm" type="button" name="answer" value="Map View" id="hide"/>
             <p></p>
