--- a/app/client/cookscookbook.html
+++ b/app/client/cookscookbook.html
@@ -34,14 +34,16 @@
         </div>
 
     {{/each}}
-    <div class="col-xs-3">
-    </div>
-    <div class="col-xs-3">
-        <button type="button" class="btn orderButton">Add another meal</button>
-    </div>
-    <div class="col-xs-3">
-        <button type="button" class="btn orderButton">View Your Dashboard</button>
-    </div>
-    <div class="col-xs-3">
+    <div class="row">
+        <div class="col-xs-3">
+        </div>
+        <div class="col-xs-3">
+           <a href="/create"><button type="button" class="btn orderButton">Add another meal</button></a>
+        </div>
+        <div class="col-xs-3">
+           <a href="/dashboard"><button type="button" class="btn orderButton">View Your Dashboard</button></a>
+        </div>
+        <div class="col-xs-3">
+        </div>
     </div>
 </template>
